calendar app created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^2.1.1
   one_clock: ^1.0.9
   json_annotation: ^4.8.1
+  table_calendar: ^3.0.9
 
 
 dev_dependencies:
