I couldn't solve any problem today, but I think I learned 500 different ways how it can't be solved

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/apps/notesApp/
+    - assets/apps/notesApp/notesAppNotes.json
     - assets/apps/pian/pian_notes/
     - assets/apps/photosApp/images/
     - assets/apps/mailApp/
     - assets/contacts/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
