--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   one_clock: ^1.0.9
   json_annotation: ^4.8.1
   table_calendar: ^3.0.9
+  english_words: ^4.0.0
 
 
 dev_dependencies:
